<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:background="@color/home_fragment_background_color">

        <ImageView
            android:id="@+id/imageView11"
            style="@style/noSleepTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="20dp" />

        <ImageView
            android:id="@+id/imageView10"
            style="@style/noSleepCloudIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cloud_logo_no_sleep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:text="@string/recent"
            android:textSize="18sp"
            android:textFontWeight="700"
            android:lineHeight="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textFontWeight="400"
            android:lineHeight="16sp"
            android:fontFamily="@font/roboto"
            android:text="@string/complete_the_coueses_you_started"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435"
            app:srcCompat="@drawable/home_banner_background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto"
            android:text="@string/timed_meditation"
            android:textColor="#010E38"
            android:textFontWeight="600"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/roboto"
            android:text="@string/self_practice_in_silence"
            android:textColor="#010E38"
            android:textFontWeight="400"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="@+id/imageView18" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>