<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.getstarted.LoginGetStartedFragment"
        android:background="@color/get_started_login_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:src="@drawable/ic_login_top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/getStartedLoginLogo"
            style="@style/noSleepTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="20dp" />

        <ImageView
            android:id="@+id/imageView10"
            style="@style/noSleepCloudIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cloud_logo_no_sleep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getStartedLoginLogo"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:text="@string/want_to_join_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            tools:ignore="UnusedAttribute"
            style="@style/getstartedloginjoinus" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="111dp"
            android:src="@drawable/login_human_background_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/humanImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="98dp"
            android:src="@drawable/login_backgorund_human"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView6"
            style="@style/getstartedloginjoinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="42dp"
            android:lineHeight="21sp"
            android:text="@string/info_get_started_text"
            android:textFontWeight="700"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humanImage"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/buttonGetStarteds"
            style="@style/getStartedButtonStyle"
            android:layout_width="197dp"
            android:layout_height="61dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#E9EFFF"
            android:drawableLeft="@drawable/ic_email_icon"
            android:text="@string/get_started_login_text"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13"
            app:layout_constraintVertical_bias="0.454"
            app:strokeColor="#404756"
            app:strokeWidth="4sp"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>